src/styles/style.scss
@import "common";
@import "fonts";

@import "~bootstrap/scss/bootstrap";
@import "~hamburgers/_sass/hamburgers/hamburgers.scss";
@import "~@fortawesome/fontawesome-free/css/all.min.css";

@import "loader";

body {
  position: relative;
  font-family: $font-family-sans-serif;
  font-size: 1rem;
}

p {
  margin-bottom: 0.5rem;
}

.title {
  position: relative;
  font-size: 1.8rem;
  &:after {
    position: absolute;
    content: "";
    left: 0px;
    bottom: -0.5rem;
    width: 60px;
    height: 0.2rem;
    background-color: $primary;
  }
  margin-bottom: 1rem;
  font-weight: 400;
}

.subTitle {
  // margin-top: 3rem;
  margin-bottom: 0px;
  font-weight: 300;
  // float: right;
}

main {
  display: flex;
  justify-content: center;
  margin-top: 5rem;
  padding: 0 0.5rem;
  @include media-breakpoint-up(lg) {
    margin-top: 10rem;
    padding-right: unset;
    padding-left: unset;
  }
}

header {
  height: 5rem;
  @include media-breakpoint-up(lg) {
    height: 10rem;
  }

  .mobile-page-name {
    padding-left: 1rem;
    font-size: 1.5rem;
    font-family: $font-family-monospace;
    line-height: 2;
  }
}

// General Non theme Related
.except-mobile-flex {
  @extend .d-none;
  @extend .d-lg-flex;
}

.only-mobile-flex {
  @extend .d-flex;
  @extend .d-lg-none;
}

.except-mobile-block {
  @extend .d-none;
  @extend .d-lg-block;
}

.only-mobile-block {
  @extend .d-block;
  @extend .d-lg-none;
}

button:focus {
  outline: 0;
}

.font-lg {
  font-size: 1.5rem;
}

.page-menu {
  .nav-link {
    font-family: $font-family-monospace;
  }
  .nav-item {
    font-size: 1.2rem;
    a {
      outline: 0;
      border: none;
    }
    &.active {
      a {
        color: var(--primary);
      }
      font-weight: bold;
    }
  }
}

.page-menu.nav.nav-mobile {
  height: 140px;
  max-width: 100%;
  font-size: 1.5rem;
  align-items: center;
  // flex-wrap: wrap;
  .nav-item {
    display: flex;
    width: 50%;
    flex-grow: 0;
    padding: 10px 5px;
    &:nth-child(1),
    &:nth-child(2) {
      padding-bottom: 5px;
    }
    &:nth-child(3),
    &:nth-child(4) {
      padding-top: 5px;
    }

    .nav-link {
      background: rgba(0, 0, 0, 0.1);
      border-radius: 0.5rem;
      padding: 1rem;
      width: 100%;
    }
  }
}

.image-wrapper {
  position: relative;

  .image,
  .image-hover {
    border-radius: 1.25rem;
  }
}
.image-hover {
  position: absolute !important;
  top: 0;
  left: 0;
  opacity: 0;
  transition: opacity 1s ease-out;
  padding: 20px;
}

.overlay-menu__overlay {
  box-shadow: none;
}

.overlay-menu__wrap {
  position: unset !important;
  background: none !important;
  box-shadow: none !important;
  padding-top: 80px !important;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  padding: 1.5rem;
}

.box {
  border-radius: 0.5rem;
  padding: 1.5rem;
  position: relative;

  &.flip-right {
    border-radius: 1.25rem 0.5rem;
  }

  &.flip-left {
    border-radius: 0.5rem 1.25rem;
  }
  margin-bottom: 1.5rem;
}

.box-border {
  border-radius: 0.5rem;
  &.flip-right {
    border-radius: 1.25rem 0.5rem;
  }

  &.flip-left {
    border-radius: 0.5rem 1.25rem;
  }
}

.work-experience-container {
  @include media-breakpoint-up(sm) {
    padding-left: 16px;
    margin-top: -5px;
  }
  .work-experience {
    padding: 0 0 24px 0px;
    @include media-breakpoint-up(sm) {
      border-left: 1px dashed #999999;
      padding: 0 0 24px 16px;
    }

    .work-item {
      @include media-breakpoint-up(sm) {
        padding: 0.5rem;
        margin-left: -1px;
      }
    }
    .work-title {
      font-weight: normal;
      font-size: 1.5rem;
      margin-bottom: -0.25rem;

      @include media-breakpoint-up(sm) {
        &:after {
          content: "";
          width: 1rem;
          height: 1rem;
          float: left;
          border-radius: 1rem;
          margin: 0.4rem 0 0 -32px;
          background: $primary;
        }
      }
    }

    &:first-child {
      padding-top: 30px;
    }

    &:last-child {
      padding-bottom: 0px;
    }
  }
}

.technologies-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
  grid-template-rows: repeat(auto-fill, minmax(120px, 1fr));
  column-gap: 10px;
  row-gap: 10px;
}

.portfolio-card {
  border: none;
  background: none;

  .portfolio-image-card {
    z-index: 1;
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
  }

  .portfolio-body {
    background: rgba(153, 153, 153, 0.1);
    // border-bottom-left-radius: 0.5rem;
    // border-bottom-right-radius: 0.5rem;

    .card-title {
      font-size: 1.2rem;
      text-transform: uppercase;
      font-family: "HK Grotesk Bold";
      color: $primary;
    }

    .project-info {
      display: flex;
      flex-direction: column;
    }

    .portfolio-summary {
      font-size: 1rem;
      font-weight: bold;
      text-transform: uppercase;
      font-family: "HK Grotesk Bold";
    }

    .portfolio-aside-list {
      padding-left: 0;
      margin-bottom: 0;
      justify-self: flex-end;
      align-self: flex-end;
      width: 100%;

      li {
        display: flex;
        padding: 5px 0;
        border-bottom: 1px solid #999999;
        font-size: 18px;

        .t-left {
          flex: 0 0 60px;
          text-align: left;
          font-family: "HK Grotesk Light";
        }

        .t-right {
          text-align: left;
          margin-left: 5px;
          margin-right: 5px;
          font-family: "HK Grotesk Medium";
        }
        &:last-child {
          border-bottom: unset;
        }

        .t-right.cate-link {
          margin-left: 0;
          .badge {
            margin-left: 5px;
            margin-right: 5px;
          }
        }
      }
    }
  }
}

// Only Theme related
@include themify($themes) {
  color: themed("contentTextColor");
  background-color: themed("backgroundColor");

  a {
    color: $primary;
    font-weight: 400;
    transition: all 300ms ease-in-out;
    &:hover {
      font-weight: bold;
    }
  }

  a.btn-resume {
    box-shadow: 0px 15px 20px themed("shadowColor");
    transition: all 300ms ease-in-out;
    background-color: rgba(153, 153, 153, 0.1);
    color: themed("contentTextColor");
    font-weight: bold;

    &:hover {
      background-color: themed("contentTextColor");
      color: themed("contentBackgroundColor");
    }
  }

  .readmore.container {
    padding: 0;

    .readmore.overhang {
      background: none !important;
    }
  }

  .readmore.container + button {
    background-color: rgba(153, 153, 153, 0.1);
    border: none;
    padding: 8px;
    color: $primary;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
  }

  .portfolio-body {
    .badge {
      background-color: themed("headerTextColor");
      color: themed("contentBackgroundColor");
    }
  }

  .company-link {
    color: themed("contentTextColor");
  }

  .shadow {
    box-shadow: 0px 40px 50px themed("shadowColor") !important;
    transition: box-shadow $theme-transition ease;
  }

  .box {
    background-color: themed("contentBackgroundColor");
    transition: box-shadow 0.3s ease-in-out,
      background-color $theme-transition ease;
  }

  header {
    background-color: themed("backgroundColor");
    transition: background-color $theme-transition ease;
  }

  .subTitle {
    color: themed("contentTextColor") !important;
    // font-family: $font-family-monospace;
    font-size: 1.5rem;
  }

  .social-icon {
    path {
      transition: fill 0.3s ease-in-out;
      fill: themed("contentTextColor") !important;
    }

    &:hover {
      path {
        fill: $primary !important;
      }
    }
  }

  .page-menu {
    .nav-item {
      a {
        color: themed("contentTextColor");
      }

      &.active {
        a {
          color: var(--primary);
        }
      }
    }
  }

  .overlay-menu__overlay {
    background-color: themed("backgroundColor");
    transition: background-color $theme-transition ease;
  }

  .hamburger-inner,
  .hamburger-inner::before,
  .hamburger-inner::after,
  .hamburger.is-active .hamburger-inner,
  .hamburger.is-active .hamburger-inner::before,
  .hamburger.is-active .hamburger-inner::after {
    background-color: themed("contentTextColor");
  }

  #___loader {
    transition: background-color $theme-transition ease,
      color $theme-transition ease;

    .loadingScreen {
      background-color: themed("backgroundColor");
    }
  }
}

